# term-color-detector

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
src/: main.rs
