[package]
name = "term-bg"
version = "0.1.0"
edition = "2021"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"