[package]
name = "term-color-detector"
version = "1.0.1"
edition = "2021"

[[bin]]
name = "term-color-det"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"